codex-rs/tui/src/bottom_pane/tests/snapshots/codex_tui__bottom_pane__tests__actionable_banner_tests__banner_wrapped_url.snap
---
source: tui/src/bottom_pane/tests/actionable_banner_tests.rs
expression: visible
---
                                        
  Review the release                    
  Open https://github.com/openai/       
  codex/pull/12345?diff=split before    
  continuing.                           
                                        
  esc to dismiss · type to continue     
                                        
                                        
› Ask Zuno to do anything               
                                        
  ? for shortcuts    100% context left
