codex-rs/tui/src/bottom_pane/tests/snapshots/codex_tui__bottom_pane__tests__actionable_banner_tests__information_banner_dismissible.snap
---
source: tui/src/bottom_pane/tests/actionable_banner_tests.rs
assertion_line: 34
expression: rendered
---
                                                                      
  Usage limit reached                                                 
  You can change models or request more usage.                        
                                                                      
  esc to dismiss · type to continue                                   
                                                                      
                                                                      
› Ask Zuno to do anything                                             
                                                                      
  ? for shortcuts                                  100% context left
